fix: dark mode and index no collapsed

--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -306,12 +306,12 @@
       margin: 0 !important;
 
       &.toc-line-h2 {
-        width: 22px !important;
+        width: 16px !important;
       }
 
       &.toc-line-h3 {
-        width: 16px !important;
-        margin-left: 3px !important;
+        width: 14px !important;
+        margin-left: 2px !important;
       }
 
       &.active {
